BT-78 discussion ie fix responsive

--- a/lms/static/sass/base/_override.scss
+++ b/lms/static/sass/base/_override.scss
@@ -3097,6 +3097,7 @@ body {
             text-align: center;
             color: $white;
             background-color: $theme-link;
+            display: inline-block;
             &:hover {
                 background-color: $theme-link-hover;
                 color: $white;
